prodMetadata/src/objects/Email_iWant__c.object
<CustomObject>
    <description>Email iWant</description>
    <fields>
        <fullName>Body_1st_Email__c</fullName>
        <label>Body 1st Email</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body_2nd_Email__c</fullName>
        <label>Body 2nd Email</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body_Conf_Email__c</fullName>
        <label>Body Conf Email</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body_Followup_Email__c</fullName>
        <label>Body Followup Email</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the campaign for which the eWant is related.</inlineHelpText>
        <label>Campaign/Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>eWants</relationshipLabel>
        <relationshipName>eWants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Press Hit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_1st_Email__c</fullName>
        <inlineHelpText>This is the date that the first email should go out.</inlineHelpText>
        <label>Date 1st Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Email__c</fullName>
        <label>Date 2nd Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Confirmation__c</fullName>
        <description>Date that the confirmation email should go out.</description>
        <inlineHelpText>Date that the confirmation email should go out.</inlineHelpText>
        <label>Date Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Follow_up__c</fullName>
        <description>Date for the Follow Up Email</description>
        <inlineHelpText>Date for the Follow Up Email</inlineHelpText>
        <label>Date Follow-up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Content__c</fullName>
        <description>Content of the SMS (text message) Confirmation Message to be sent day of the event.</description>
        <inlineHelpText>Content of the SMS (text message) Confirmation Message to be sent day of the event.</inlineHelpText>
        <label>SMS Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signup_Form_Desired_URL__c</fullName>
        <defaultValue>&quot;http://iavaonline.org/&quot;</defaultValue>
        <description>This is the desired &quot;short&quot; URL for the signup form. i.e. http://iavaonline.org/patsrun</description>
        <inlineHelpText>This is the desired &quot;short&quot; URL for the signup form. i.e. http://iavaonline.org/patsrun</inlineHelpText>
        <label>Signup Form Desired URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Form_Link__c</fullName>
        <description>This is the URL for the link to the signup form as it should be included in the DIA emails.</description>
        <inlineHelpText>This is the URL for the link to the signup form as it should be included in the DIA emails.</inlineHelpText>
        <label>Signup Form Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Additional Info Needed</fullName>
                </value>
                <value>
                    <fullName>Reviewed with Changes</fullName>
                </value>
                <value>
                    <fullName>Ready for Launch</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_1st_Email__c</fullName>
        <description>Subject Line of the 1st Email</description>
        <inlineHelpText>Subject Line of the 1st Email</inlineHelpText>
        <label>Subject 1st Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_2nd_Email__c</fullName>
        <description>Subject Line of the 2nd Email</description>
        <inlineHelpText>Subject Line of the 2nd Email</inlineHelpText>
        <label>Subject 2nd Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Conf_Email__c</fullName>
        <description>Subject of the Confirmation Email</description>
        <label>Subject Conf Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Followup_Email__c</fullName>
        <description>Subject Line of the Follow-up Email</description>
        <inlineHelpText>Subject Line of the Follow-up Email</inlineHelpText>
        <label>Subject Followup Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Tweet__c</fullName>
        <inlineHelpText>No more than 140 characters</inlineHelpText>
        <label>Suggested Tweet</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Desired_URL__c</fullName>
        <defaultValue>&quot;http://iavaonline.org/&quot;</defaultValue>
        <description>This is the desired &quot;short&quot; URL for the survey.</description>
        <inlineHelpText>This is the desired &quot;short&quot; URL for the survey.</inlineHelpText>
        <label>Survey Desired URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <defaultValue>&quot;http://iavaonline.org/SURVEY?tfa_email=Contact.Email&quot;</defaultValue>
        <description>This is the full URL for the post-event survey.</description>
        <inlineHelpText>This is the full URL for the post-event survey.</inlineHelpText>
        <label>Survey Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NewGIBill.org</fullName>
                </value>
                <value>
                    <fullName>iava.org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>eWant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>eW-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>eWant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eWants</pluralLabel>
    <recordTypes>
        <fullName>Email_Content</fullName>
        <active>true</active>
        <description>Email Content Requiest</description>
        <label>Email Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Content</fullName>
        <active>true</active>
        <description>This specifies a request for website content</description>
        <label>Website Content</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zip_Code</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISNUMBER( Zip_Code__c )) || (LEN(Zip_Code__c) &lt;&gt; 5)</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>Not a valid Zip Code</errorMessage>
    </validationRules>
</CustomObject>